Fixed bug iwth no month row 4 or 5. Also bumped dependencies Cleaned up the code a small bit for both cal and libray